tests/algorithms/x/C/data_structures/binary_tree/avl_tree.c
// Generated by Mochi 0.10.32 on 2025-08-24 14:55 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static MapSI* list_append_MapSI(MapSI *arr, size_t *len, MapSI val) {
    arr = realloc(arr, (*len + 1) * sizeof(MapSI));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long NIL = -1LL;
MapSI *nodes = NULL;
size_t nodes_len = 0;

long long new_node(long long value);
long long get_height(long long i);
long long my_max(long long a, long long b);
void update_height(long long i);
long long right_rotation(long long i);
long long left_rotation(long long i);
long long lr_rotation(long long i);
long long rl_rotation(long long i);
long long insert_node(long long i, long long value);
long long get_left_most(long long i);
long long del_node(long long i, long long value);
const char* inorder(long long i);
void user_main();
int main(void);

long long new_node(long long value) {
    const char* node_keys[20] = {"data", "left", "right", "height"};
    int node_vals[20] = {value, -1, -1, 1};
    size_t node_len = 4;
    MapSI node = { node_keys, node_vals, 4, 20 };
    nodes = list_append_MapSI(nodes, &nodes_len, node);
    return nodes_len - 1LL;
}

long long get_height(long long i) {
    if (i == NIL) {
        return 0LL;
    }
    return map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "height");
}

long long my_max(long long a, long long b) {
    if (a > b) {
        return a;
    }
    return b;
}

void update_height(long long i) {
    nodes[(int)(i)][(int)("height")] = my_max(get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left")), get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"))) + 1LL;
}

long long right_rotation(long long i) {
    long long left = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left");
    nodes[(int)(i)][(int)("left")] = map_get_si(nodes[(int)({long long _mochi_idx = left; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = left; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = left; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right");
    nodes[(int)(left)][(int)("right")] = i;
    update_height(i);
    update_height(left);
    return left;
}

long long left_rotation(long long i) {
    long long right = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right");
    nodes[(int)(i)][(int)("right")] = map_get_si(nodes[(int)({long long _mochi_idx = right; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = right; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = right; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left");
    nodes[(int)(right)][(int)("left")] = i;
    update_height(i);
    update_height(right);
    return right;
}

long long lr_rotation(long long i) {
    nodes[(int)(i)][(int)("left")] = left_rotation(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"));
    return right_rotation(i);
}

long long rl_rotation(long long i) {
    nodes[(int)(i)][(int)("right")] = right_rotation(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"));
    return left_rotation(i);
}

long long insert_node(long long i, long long value) {
    if (i == NIL) {
        return new_node(value);
    }
    if (value < map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data")) {
        nodes[(int)(i)][(int)("left")] = insert_node(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"), value);
        if ((get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left")) - get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"))) == 2LL) {
            if (value < map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data")) {
                i = right_rotation(i);
            } else {
                i = lr_rotation(i);
            }
        }
    } else {
        nodes[(int)(i)][(int)("right")] = insert_node(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"), value);
        if ((get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right")) - get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"))) == 2LL) {
            if (value < map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data")) {
                i = rl_rotation(i);
            } else {
                i = left_rotation(i);
            }
        }
    }
    update_height(i);
    return i;
}

long long get_left_most(long long i) {
    long long cur = i;
    while (map_get_si(nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left") != NIL) {
        cur = map_get_si(nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left");
    }
    return map_get_si(nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = cur; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data");
}

long long del_node(long long i, long long value) {
    if (i == NIL) {
        return NIL;
    }
    if (value < map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data")) {
        nodes[(int)(i)][(int)("left")] = del_node(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"), value);
    } else {
        if (value > map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data")) {
            nodes[(int)(i)][(int)("right")] = del_node(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"), value);
        } else {
            if ((map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left") != NIL) && (map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right") != NIL)) {
                long long temp = get_left_most(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"));
                nodes[(int)(i)][(int)("data")] = temp;
                nodes[(int)(i)][(int)("right")] = del_node(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"), temp);
            } else {
                if (map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left") != NIL) {
                    i = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left");
                } else {
                    i = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right");
                }
            }
        }
    }
    if (i == NIL) {
        return NIL;
    }
    long long lh = get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"));
    long long rh = get_height(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"));
    if ((rh - lh) == 2LL) {
        if (get_height(map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right")) > get_height(map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"))) {
            i = left_rotation(i);
        } else {
            i = rl_rotation(i);
        }
    } else {
        if ((lh - rh) == 2LL) {
            if (get_height(map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left")) > get_height(map_get_si(nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"); _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"))) {
                i = right_rotation(i);
            } else {
                i = lr_rotation(i);
            }
        }
    }
    update_height(i);
    return i;
}

const char* inorder(long long i) {
    if (i == NIL) {
        return "";
    }
    const char* left = inorder(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "left"));
    const char* right = inorder(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "right"));
    const char* res = str_int(map_get_si(nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].keys, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].vals, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})].len, "data"));
    if (strcmp(left, "") != 0) {
        res = str_concat(str_concat(left, " "), res);
    }
    if (strcmp(right, "") != 0) {
        res = str_concat(str_concat(res, " "), right);
    }
    return res;
}

void user_main() {
    nodes = NULL;
    nodes_len = 0;
    long long root = NIL;
    root = insert_node(root, 4LL);
    root = insert_node(root, 2LL);
    root = insert_node(root, 3LL);
    puts(inorder(root));
    puts(str_int(get_height(root)));
    root = del_node(root, 3LL);
    puts(inorder(root));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
